exports[`ban-ts-comment > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 31
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 24
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 40
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 42
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 3
        },
        "end": {
          "line": 3,
          "column": 46
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 15`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 3 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveComment",
      "message": "Do not use \\"@ts-expect-error\\" because it alters compilation errors.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 10 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentRequiresDescription",
      "message": "Include a description after the \\"@ts-expect-error\\" directive to explain why the @ts-expect-error is necessary. The description must be 25 characters or longer.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 43
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-expect-error\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 31
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`ban-ts-comment > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "ban-ts-comment",
      "messageId": "tsDirectiveCommentDescriptionNotMatchPattern",
      "message": "The description for the \\"@ts-expect-error\\" directive must match the ^: TS\\\\d+ because .+$ format.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 35
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;
